devtools/client/application/src/components/service-workers/RegistrationList.css
.aboutdebugging-plug {
  padding-block: calc(var(--base-unit) * 3);
  border-block-start: 1px solid var(--separator-color);

  
  display: flex;
  flex-direction: row;
  column-gap: calc(var(--base-unit) * 2);
  align-items: baseline;
  font-size: var(--body-10-font-size);
  font-weight: var(--body-10-font-weight);
}

.aboutdebugging-plug::before {
  flex: 0 0 auto;
  width: calc(var(--base-unit) * 4);
  height: calc(var(--base-unit) * 4);
  content: "";
  background-image: url(chrome://browser/skin/developer.svg);
  



  position: relative;
  top: 3px;
}

.registrations-container {
  flex-grow: 1;
}

.registrations-container__list {
  padding-inline-start: 0;
}

.registrations-container__item {
  list-style-type: none;
  margin: 0;
  padding: calc(var(--base-unit) * 5) 0;
}

.registrations-container__item:first-child {
  padding-top: 0;
}

.registrations-container__item:not(:last-child) {
  border-bottom: 1px solid var(--separator-color);
}

