Bug 1641271 - Fix the icons for dark mode in the Service Workers in the Application panel r=ladybenko
Differential Revision: https://phabricator.services.mozilla.com/D77101

UltraBlame original commit: 18771562cd107b0fb4b7f80cded3aa5762d9ea09

--- a/devtools/client/application/src/components/service-workers/RegistrationList.css
+++ b/devtools/client/application/src/components/service-workers/RegistrationList.css
@@ -20,6 +20,8 @@
   width: calc(var(--base-unit) * 4);
   height: calc(var(--base-unit) * 4);
   content: "";
+  -moz-context-properties: fill;
+  fill: currentColor;
   background-image: url(chrome://browser/skin/developer.svg);
   
 
